compiler/fir/resolve/testData/resolve/stdlib/problems/classLiteralForParameter.kt
inline fun <reified T : Any> foo(t: T): T {
    val klass = <!OTHER_ERROR!>T<!>::class.<!INAPPLICABLE_CANDIDATE!>java<!>
    return t
}